[gd_scene load_steps=8 format=3 uid="uid://d05byeyu7a5bw"]

[ext_resource type="Texture2D" uid="uid://cqp8gt0rarjhe" path="res://assets/space_background.png" id="1_5gohc"]
[ext_resource type="Script" path="res://main.gd" id="1_jp7uv"]
[ext_resource type="PackedScene" uid="uid://qu6knxpdn040" path="res://rock.tscn" id="2_28dlu"]
[ext_resource type="PackedScene" uid="uid://bxsk2bb8jppip" path="res://player.tscn" id="2_tut11"]
[ext_resource type="PackedScene" uid="uid://cv3t11tyybhh7" path="res://enemy.tscn" id="4_81mcp"]
[ext_resource type="PackedScene" uid="uid://bsakmxjayw8p3" path="res://hud.tscn" id="5_ujm7d"]

[sub_resource type="Curve2D" id="Curve2D_gt3iu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -64, -64, 0, 0, 0, 0, 1984, -64, 0, 0, 0, 0, 1984, 1152, 0, 0, 0, 0, -64, 1152, 0, 0, 0, 0, -64, -64)
}
point_count = 5

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_jp7uv")
rock_scene = ExtResource("2_28dlu")
player_scene = ExtResource("2_tut11")
enemey_scene = ExtResource("4_81mcp")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_5gohc")

[node name="Player" parent="." instance=ExtResource("2_tut11")]
position = Vector2(960, 543)

[node name="RockPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_gt3iu")

[node name="RockSpawn" type="PathFollow2D" parent="RockPath"]
position = Vector2(-64, -64)

[node name="HUD" parent="." instance=ExtResource("5_ujm7d")]
process_mode = 1

[node name="EnemyTimer" type="Timer" parent="."]
one_shot = true

[connection signal="dead" from="Player" to="." method="game_over"]
[connection signal="energy_changed" from="Player" to="HUD" method="update_energy_bar"]
[connection signal="lives_changed" from="Player" to="HUD" method="update_lives"]
[connection signal="shield_changed" from="Player" to="HUD" method="update_shield"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
